--- a/bower.json
+++ b/bower.json
@@ -1,22 +1,29 @@
 {
   "name": "bootstrap-navbar-vertical",
-  "version": "0.0.1",
-  "authors": [
-    "Fredrik Broman <frebro@gmail.com>"
-  ],
   "description": "A vertical layout extension for Bootstrap Navbar.",
-  "keywords": [
-    "bootstrap"
+  "version": "0.0.2",
+  "main": [
+    "dist/css/bootstrap-navbar-vertical.css"
   ],
   "license": "MIT",
-  "homepage": "https://github.com/frebro/bootstrap-vertical-navbar",
   "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "test",
-    "tests"
+    "node_modules/",
+    "bower_components/",
+    ".gitignore",
+    ".tmp/"
   ],
+  "keywords": [
+    "bootstrap",
+    "less"
+  ],
+  "authors": [
+    "Fredrik Broman", "Fredrik Broman <frebro@gmail.com>"
+  ],
+  "homepage": "https://github.com/frebro/bootstrap-navbar-vertical",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/frebro/bootstrap-navbar-vertical.git"
+  },
   "devDependencies": {
     "bootstrap": "3.2.0"
   }
